welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:7: error: ')' expected but '{' found.
        { avance(); }
        ^RunHalf:8: error: ';' expected but 'if' found.
	     if (estSurOrange()) { caseOrange = caseOrange + 1; }
             ^